tests/bad/expr-statements/match_empty.oc
/// fail: Expression-match must yield a value

enum Hello {}

def main() {
    let x: Hello
    let y = match x {}
}